# voice-squads

./: .env.template  .gitignore  Dockerfile  LICENSE  Readme.md  alembic_readme.md  bot.py  config.py  docker-compose.yaml  logger.py  pyproject.toml
.github/workflows/: bot.yml
alembic/: env.py
alembic/versions/: 17967282c188_add_server_settings.py  4a78ffa1b6c5_create_initial_tables.py  a912a43663a5_add_default_channel_limit.py
cogs/: admin.py  other_commands.py  sync.py
database/: connection.py
database/dto/: channel_names.py  server_settings.py  voice_channels.py
utils/: channel_names.py  server_settings.py  voice_channels.py
